Adjust KASSERT in device_ctrl_done to polling case.

PR/48213: ehci assertion failure during boot